vowelparse.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls vdecl
   4        | decls fdecl

   5  fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

   6  formals_opt :
   7              | formal_list

   8  formal_list : typ ID
   9              | formal_list COMMA typ ID

  10  typ : INT
  11      | BOOL
  12      | FLOAT
  13      | VOID
  14      | STRING
  15      | typ ARRAY

  16  vdecl_list :
  17             | vdecl_list vdecl

  18  vdecl : typ ID SEMI

  19  stmt_list :
  20            | stmt_list stmt

  21  stmt : expr SEMI
  22       | RETURN expr_opt SEMI
  23       | LBRACE stmt_list RBRACE
  24       | IF LPAREN expr RPAREN stmt
  25       | IF LPAREN expr RPAREN stmt ELSE stmt
  26       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  27       | WHILE LPAREN expr RPAREN stmt

  28  expr_opt :
  29           | expr

  30  expr : LITERAL
  31       | FLIT
  32       | SLIT
  33       | BLIT
  34       | ID
  35       | expr PLUS expr
  36       | expr MINUS expr
  37       | expr TIMES expr
  38       | expr DIVIDE expr
  39       | expr MODULUS expr
  40       | expr EQ expr
  41       | expr NEQ expr
  42       | expr LT expr
  43       | expr LEQ expr
  44       | expr GT expr
  45       | expr GEQ expr
  46       | expr AND expr
  47       | expr OR expr
  48       | MINUS expr
  49       | NOT expr
  50       | ID ASSIGN expr
  51       | ID INCR expr
  52       | ID LPAREN args_opt RPAREN
  53       | LPAREN expr RPAREN
  54       | ID DECREMENT expr
  55       | ID LBRACKET expr RBRACKET
  56       | LBRACKET args_list RBRACKET
  57       | ID LBRACKET expr RBRACKET ASSIGN expr

  58  args_opt :
  59           | args_list

  60  args_list : expr
  61            | args_list COMMA expr

  62  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (62)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (62)

	.  reduce 62


state 4
	program : decls . EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . fdecl  (4)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STRING  shift 9
	EOF  shift 10
	.  error

	vdecl  goto 11
	fdecl  goto 12
	typ  goto 13


state 5
	typ : INT .  (10)

	.  reduce 10


state 6
	typ : BOOL .  (11)

	.  reduce 11


state 7
	typ : FLOAT .  (12)

	.  reduce 12


state 8
	typ : VOID .  (13)

	.  reduce 13


state 9
	typ : STRING .  (14)

	.  reduce 14


state 10
	program : decls EOF .  (1)

	.  reduce 1


state 11
	decls : decls vdecl .  (3)

	.  reduce 3


state 12
	decls : decls fdecl .  (4)

	.  reduce 4


state 13
	fdecl : typ . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	typ : typ . ARRAY  (15)
	vdecl : typ . ID SEMI  (18)

	ARRAY  shift 14
	ID  shift 15
	.  error


state 14
	typ : typ ARRAY .  (15)

	.  reduce 15


state 15
	fdecl : typ ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	vdecl : typ ID . SEMI  (18)

	SEMI  shift 16
	LPAREN  shift 17
	.  error


state 16
	vdecl : typ ID SEMI .  (18)

	.  reduce 18


state 17
	fdecl : typ ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	formals_opt : .  (6)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STRING  shift 9
	RPAREN  reduce 6

	typ  goto 18
	formals_opt  goto 19
	formal_list  goto 20


state 18
	formal_list : typ . ID  (8)
	typ : typ . ARRAY  (15)

	ARRAY  shift 14
	ID  shift 21
	.  error


state 19
	fdecl : typ ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)

	RPAREN  shift 22
	.  error


state 20
	formals_opt : formal_list .  (7)
	formal_list : formal_list . COMMA typ ID  (9)

	COMMA  shift 23
	RPAREN  reduce 7


state 21
	formal_list : typ ID .  (8)

	.  reduce 8


state 22
	fdecl : typ ID LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (5)

	LBRACE  shift 24
	.  error


state 23
	formal_list : formal_list COMMA . typ ID  (9)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STRING  shift 9
	.  error

	typ  goto 25


state 24
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (5)
	vdecl_list : .  (16)

	.  reduce 16

	vdecl_list  goto 26


state 25
	formal_list : formal_list COMMA typ . ID  (9)
	typ : typ . ARRAY  (15)

	ARRAY  shift 14
	ID  shift 27
	.  error


state 26
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE  (5)
	vdecl_list : vdecl_list . vdecl  (17)
	stmt_list : .  (19)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STRING  shift 9
	LPAREN  reduce 19
	LBRACE  reduce 19
	RBRACE  reduce 19
	LBRACKET  reduce 19
	MINUS  reduce 19
	NOT  reduce 19
	RETURN  reduce 19
	IF  reduce 19
	FOR  reduce 19
	WHILE  reduce 19
	LITERAL  reduce 19
	BLIT  reduce 19
	ID  reduce 19
	FLIT  reduce 19
	SLIT  reduce 19

	vdecl  goto 28
	typ  goto 29
	stmt_list  goto 30


state 27
	formal_list : formal_list COMMA typ ID .  (9)

	.  reduce 9


state 28
	vdecl_list : vdecl_list vdecl .  (17)

	.  reduce 17


state 29
	typ : typ . ARRAY  (15)
	vdecl : typ . ID SEMI  (18)

	ARRAY  shift 14
	ID  shift 31
	.  error


state 30
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE  (5)
	stmt_list : stmt_list . stmt  (20)

	LPAREN  shift 32
	LBRACE  shift 33
	RBRACE  shift 34
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	RETURN  shift 38
	IF  shift 39
	FOR  shift 40
	WHILE  shift 41
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	stmt  goto 47
	expr  goto 48


state 31
	vdecl : typ ID . SEMI  (18)

	SEMI  shift 16
	.  error


state 32
	expr : LPAREN . expr RPAREN  (53)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 49


state 33
	stmt : LBRACE . stmt_list RBRACE  (23)
	stmt_list : .  (19)

	.  reduce 19

	stmt_list  goto 50


state 34
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE .  (5)

	.  reduce 5


state 35
	expr : LBRACKET . args_list RBRACKET  (56)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 51
	args_list  goto 52


state 36
	expr : MINUS . expr  (48)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 53


state 37
	expr : NOT . expr  (49)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 54


state 38
	stmt : RETURN . expr_opt SEMI  (22)
	expr_opt : .  (28)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	SEMI  reduce 28

	expr  goto 55
	expr_opt  goto 56


state 39
	stmt : IF . LPAREN expr RPAREN stmt  (24)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (25)

	LPAREN  shift 57
	.  error


state 40
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (26)

	LPAREN  shift 58
	.  error


state 41
	stmt : WHILE . LPAREN expr RPAREN stmt  (27)

	LPAREN  shift 59
	.  error


state 42
	expr : LITERAL .  (30)

	.  reduce 30


state 43
	expr : BLIT .  (33)

	.  reduce 33


state 44
	expr : ID .  (34)
	expr : ID . ASSIGN expr  (50)
	expr : ID . INCR expr  (51)
	expr : ID . LPAREN args_opt RPAREN  (52)
	expr : ID . DECREMENT expr  (54)
	expr : ID . LBRACKET expr RBRACKET  (55)
	expr : ID . LBRACKET expr RBRACKET ASSIGN expr  (57)

	LPAREN  shift 60
	LBRACKET  shift 61
	ASSIGN  shift 62
	INCR  shift 63
	DECREMENT  shift 64
	SEMI  reduce 34
	RPAREN  reduce 34
	RBRACKET  reduce 34
	COMMA  reduce 34
	PLUS  reduce 34
	MINUS  reduce 34
	TIMES  reduce 34
	DIVIDE  reduce 34
	MODULUS  reduce 34
	EQ  reduce 34
	NEQ  reduce 34
	LT  reduce 34
	LEQ  reduce 34
	GT  reduce 34
	GEQ  reduce 34
	AND  reduce 34
	OR  reduce 34


state 45
	expr : FLIT .  (31)

	.  reduce 31


state 46
	expr : SLIT .  (32)

	.  reduce 32


state 47
	stmt_list : stmt_list stmt .  (20)

	.  reduce 20


state 48
	stmt : expr . SEMI  (21)
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MODULUS expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LT expr  (42)
	expr : expr . LEQ expr  (43)
	expr : expr . GT expr  (44)
	expr : expr . GEQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)

	SEMI  shift 65
	PLUS  shift 66
	MINUS  shift 67
	TIMES  shift 68
	DIVIDE  shift 69
	MODULUS  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	.  error


state 49
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MODULUS expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LT expr  (42)
	expr : expr . LEQ expr  (43)
	expr : expr . GT expr  (44)
	expr : expr . GEQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)
	expr : LPAREN expr . RPAREN  (53)

	RPAREN  shift 79
	PLUS  shift 66
	MINUS  shift 67
	TIMES  shift 68
	DIVIDE  shift 69
	MODULUS  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	.  error


state 50
	stmt_list : stmt_list . stmt  (20)
	stmt : LBRACE stmt_list . RBRACE  (23)

	LPAREN  shift 32
	LBRACE  shift 33
	RBRACE  shift 80
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	RETURN  shift 38
	IF  shift 39
	FOR  shift 40
	WHILE  shift 41
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	stmt  goto 47
	expr  goto 48


state 51
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MODULUS expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LT expr  (42)
	expr : expr . LEQ expr  (43)
	expr : expr . GT expr  (44)
	expr : expr . GEQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)
	args_list : expr .  (60)

	PLUS  shift 66
	MINUS  shift 67
	TIMES  shift 68
	DIVIDE  shift 69
	MODULUS  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	RPAREN  reduce 60
	RBRACKET  reduce 60
	COMMA  reduce 60


state 52
	expr : LBRACKET args_list . RBRACKET  (56)
	args_list : args_list . COMMA expr  (61)

	RBRACKET  shift 81
	COMMA  shift 82
	.  error


state 53
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MODULUS expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LT expr  (42)
	expr : expr . LEQ expr  (43)
	expr : expr . GT expr  (44)
	expr : expr . GEQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)
	expr : MINUS expr .  (48)

	.  reduce 48


state 54
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MODULUS expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LT expr  (42)
	expr : expr . LEQ expr  (43)
	expr : expr . GT expr  (44)
	expr : expr . GEQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)
	expr : NOT expr .  (49)

	.  reduce 49


state 55
	expr_opt : expr .  (29)
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MODULUS expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LT expr  (42)
	expr : expr . LEQ expr  (43)
	expr : expr . GT expr  (44)
	expr : expr . GEQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)

	PLUS  shift 66
	MINUS  shift 67
	TIMES  shift 68
	DIVIDE  shift 69
	MODULUS  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	SEMI  reduce 29
	RPAREN  reduce 29


state 56
	stmt : RETURN expr_opt . SEMI  (22)

	SEMI  shift 83
	.  error


state 57
	stmt : IF LPAREN . expr RPAREN stmt  (24)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (25)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 84


state 58
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (26)
	expr_opt : .  (28)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	SEMI  reduce 28

	expr  goto 55
	expr_opt  goto 85


state 59
	stmt : WHILE LPAREN . expr RPAREN stmt  (27)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 86


state 60
	expr : ID LPAREN . args_opt RPAREN  (52)
	args_opt : .  (58)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	RPAREN  reduce 58

	expr  goto 51
	args_opt  goto 87
	args_list  goto 88


state 61
	expr : ID LBRACKET . expr RBRACKET  (55)
	expr : ID LBRACKET . expr RBRACKET ASSIGN expr  (57)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 89


state 62
	expr : ID ASSIGN . expr  (50)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 90


state 63
	expr : ID INCR . expr  (51)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 91


state 64
	expr : ID DECREMENT . expr  (54)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 92


state 65
	stmt : expr SEMI .  (21)

	.  reduce 21


state 66
	expr : expr PLUS . expr  (35)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 93


state 67
	expr : expr MINUS . expr  (36)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 94


state 68
	expr : expr TIMES . expr  (37)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 95


state 69
	expr : expr DIVIDE . expr  (38)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 96


state 70
	expr : expr MODULUS . expr  (39)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 97


state 71
	expr : expr EQ . expr  (40)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 98


state 72
	expr : expr NEQ . expr  (41)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 99


state 73
	expr : expr LT . expr  (42)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 100


state 74
	expr : expr LEQ . expr  (43)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 101


state 75
	expr : expr GT . expr  (44)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 102


state 76
	expr : expr GEQ . expr  (45)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 103


state 77
	expr : expr AND . expr  (46)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 104


state 78
	expr : expr OR . expr  (47)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 105


state 79
	expr : LPAREN expr RPAREN .  (53)

	.  reduce 53


state 80
	stmt : LBRACE stmt_list RBRACE .  (23)

	.  reduce 23


state 81
	expr : LBRACKET args_list RBRACKET .  (56)

	.  reduce 56


state 82
	args_list : args_list COMMA . expr  (61)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	LITERAL  shift 42
	BLIT  shift 43
	ID  shift 44
	FLIT  shift 45
	SLIT  shift 46
	.  error

	expr  goto 106


state 83
	stmt : RETURN expr_opt SEMI .  (22)

	.  reduce 22


state 84
	stmt : IF LPAREN expr . RPAREN stmt  (24)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (25)
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MODULUS expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LT expr  (42)
	expr : expr . LEQ expr  (43)
	expr : expr . GT expr  (44)
	expr : expr . GEQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)

	RPAREN  shift 107
	PLUS  shift 66
	MINUS  shift 67
	TIMES  shift 68
	DIVIDE  shift 69
	MODULUS  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	.  error


state 85
	stmt : FOR LPAREN expr_opt . SEMI expr SEMI expr_opt RPAREN stmt  (26)

	SEMI  shift 108
	.  error


state 86
	stmt : WHILE LPAREN expr . RPAREN stmt  (27)
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MODULUS expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LT expr  (42)
	expr : expr . LEQ expr  (43)
	expr : expr . GT expr  (44)
	expr : expr . GEQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)

	RPAREN  shift 109
	PLUS  shift 66
	MINUS  shift 67
	TIMES  shift 68
	DIVIDE  shift 69
	MODULUS  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	.  error


state 87
	expr : ID LPAREN args_opt . RPAREN  (52)

	RPAREN  shift 110
	.  error


state 88
	args_opt : args_list .  (59)
	args_list : args_list . COMMA expr  (61)

	COMMA  shift 82
	RPAREN  reduce 59


state 89
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MODULUS expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LT expr  (42)
	expr : expr . LEQ expr  (43)
	expr : expr . GT expr  (44)
	expr : expr . GEQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)
	expr : ID LBRACKET expr . RBRACKET  (55)
	expr : ID LBRACKET expr . RBRACKET ASSIGN expr  (57)

	RBRACKET  shift 111
	PLUS  shift 66
	MINUS  shift 67
	TIMES  shift 68
	DIVIDE  shift 69
	MODULUS  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	.  error


state 90
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MODULUS expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LT expr  (42)
	expr : expr . LEQ expr  (43)
	expr : expr . GT expr  (44)
	expr : expr . GEQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)
	expr : ID ASSIGN expr .  (50)

	PLUS  shift 66
	MINUS  shift 67
	TIMES  shift 68
	DIVIDE  shift 69
	MODULUS  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	SEMI  reduce 50
	RPAREN  reduce 50
	RBRACKET  reduce 50
	COMMA  reduce 50

